# ursula

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: dst-nightly.yml
crates/ursula/: Cargo.toml
crates/ursula-bench/: Cargo.toml
crates/ursula-bench/src/: fanout.rs
crates/ursula-ctl/: Cargo.toml
crates/ursula-ctl/src/: lib.rs  metrics.rs  observe.rs  orchestrate.rs  plan.rs  provider.rs
crates/ursula-proto/: Cargo.toml
crates/ursula-raft/: Cargo.toml
crates/ursula-raft/src/: grpc.rs  registry.rs  tests.rs  types.rs
crates/ursula-raft/src/engine/: factory.rs
crates/ursula-raft/src/log_store/: file.rs
crates/ursula-runtime/: Cargo.toml
crates/ursula-runtime/src/: tests.rs
crates/ursula-runtime/src/engine/: in_memory.rs
crates/ursula-shard/: Cargo.toml
crates/ursula-sim/: Cargo.toml
crates/ursula-sim/corpus/: failure-smoke.json
crates/ursula-sim/src/madsim_harness/: generators.rs  introspect.rs  mod.rs  raft_scenarios.rs  rolling_restart.rs  runtime_scenarios.rs  tests.rs
crates/ursula-stream/: Cargo.toml
crates/ursula/src/: lib.rs  tests.rs
crates/ursula/tests/: static_cluster_cli.rs
docs/architecture/: thread-per-core-multiraft.md
docs/migration/: cold-path-progress.md  current-cpu-plateau-analysis.md  ec2-static-cluster-s3-smoke.md  final-goal-audit.md  from-riverrun.md  official-conformance.md  perf-compare-cpu-saturation.md
docs/operations/: ec2-static-cluster.md
docs/web/: vite.config.ts
docs/web/src/components/: Footer.tsx
docs/web/src/content/blog/posts/: introducing-ursula.mdx
docs/web/src/content/docs/: index.ts
docs/web/src/content/docs/pages/: cli.mdx  configuration.mdx  deploy-cluster.mdx  install.mdx  introduction.mdx  operations.mdx  quick-start.mdx  run-locally.mdx  security.mdx  troubleshooting.mdx
docs/web/src/pages/: BenchmarkPage.tsx  BlogIndexPage.tsx  BlogPostPage.tsx  DocsPage.tsx  StatusPage.tsx
docs/web/src/styles/: index.css
helm/: Chart.yaml  NOTES.txt  README.md  values-local.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  statefulset.yaml
scripts/: ursula_chaos_agent.py  ursula_ec2.py
