[package]
name = "ursula-ctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Safe operational CLI for Ursula clusters: drains raft leaderships before restart, waits for applied_index catch-up, and refuses to roll if the cluster cannot make progress."

[[bin]]
name = "ursulactl"
path = "src/bin/ursulactl.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
