[package]
name = "ursula-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Shared protobuf wire types for Ursula (stream commands, cold chunk refs, Raft RPC payloads)."

[dependencies]
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
