[package]
name = "ursula-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Deterministic simulation harnesses for Ursula."

[dependencies]
openraft = { version = "0.10.0-alpha.20", default-features = false, features = ["tokio-rt", "type-alias", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ursula-raft = { path = "../ursula-raft", version = "0.1.0" }
ursula-runtime = { path = "../ursula-runtime", version = "0.1.0" }
ursula-shard = { path = "../ursula-shard", version = "0.1.0" }

[target.'cfg(madsim)'.dependencies]
axum = "0.8"
madsim = "0.2.34"
tower = { version = "0.5", features = ["util"] }
ursula = { path = "../ursula", version = "0.1.0" }
ursula-ctl = { path = "../ursula-ctl", version = "0.1.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }
